# Rusty_Farm

./: Cargo.toml
assets/: Rusty_Farm_World.ldtk
assets/20.01a - Character Base 2.5b/guides/: naming conventions.txt
assets/20.01a - Character Base 2.5b/optional files (unsupported)/: using the outfit canvas.txt
assets/20.01c - Peasant Farmer Pants & Hat 2.1 (comp. v01)/: naming conventions.txt  requirements.txt
assets/Rusty_Farm_World_2/backups/backup_2023-03-12_22-01-10_crash/: Rusty_Farm_World_2.ldtk
assets/crops/: README.txt.txt
assets/farmer/: README.txt.txt
saves/: save1.rson  save_games.rson
src/: animations.rs  crop.rs  gate.rs  ldtk.rs  load_atlases.rs  main.rs  path.rs  player.rs  save.rs
src/animations/: animations.rs  plugins.rs
src/bevy_animations/: animations.rs  plugins.rs  types.rs
src/crop/: mod.rs  systems.rs
src/mechanics/perspective/: mod.rs
src/player/: mod.rs  systems.rs
src/ui/: colors.rs  game_menu.rs  main_menu.rs  mod.rs  pause_menu.rs  systems.rs
