[package]
name = "rusty_farm"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.optimized-deps]
inherits = "dev"
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_animations = "0.2.2"
bevy_asset_loader = "0.14.0"
bevy_ecs_ldtk = "0.5.0"
bevy_ecs_ldtk_macros = { version = "0.5.0", optional = true }
bevy_rapier2d = "0.20.0"
kayak_ui = "0.2.0"
rand = "0.8.5"
